--- a/spring-boot-config/src/main/resources/application.properties
+++ b/spring-boot-config/src/main/resources/application.properties
@@ -2,4 +2,7 @@ app.message=hello
 # app.name=any-app
 app.description=Welcome to ${app.name}
 app.list.values=apples, mangoes, oranges
-app.db-values={connectionString: 'http://__', username: 'foo', password: 'password'}
+
+db.connection={connectionString: 'http://__', username: 'foo', password: 'password'}
+db.host=127.0.0.1
+db.port=8080
